--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,7 @@
             <div class="hero-content">
                 <p class="hero-overline">night_vault.v1.0</p>
                 <h1 class="hero-title">
-                    O Gece
+                    Gece
                     <span>Bana Güven</span>
                 </h1>
                 <p class="hero-desc">
@@ -1062,7 +1062,7 @@
         <section id="codes" class="section">
             <div class="section-header scroll-reveal">
                 <p class="section-overline">System Logs</p>
-                <h2 class="section-title">O Gece Ne Oldu</h2>
+                <h2 class="section-title">Gece Ne Oldu</h2>
             </div>
             <div class="terminal-container scroll-reveal">
                 <div class="terminal-header">
@@ -1081,12 +1081,12 @@
                         <span class="log-time">[01:44]</span> <span class="log-event">CALL_INCOMING</span><br>
                         <span class="log-impact">from:</span> Eylülüm<br>
                         <span class="log-impact">status:</span> <span class="log-status ok">answered</span><br>
-                        <span class="log-note">"Açtım. Ama uykudan yeni uyanmıştım, konuşamadım. Sen de yarı uykuluydun, belki hatırlamıyorsun."</span>
+                        <span class="log-note">"Açtım. Ama uykudan yeni uyanmıştım, konuşamadım. Neredeyse hatırlamıyorum bile."</span>
                     </div>
                     <div class="log-entry">
                         <span class="log-time">[05:00]</span> <span class="log-event">WAKE_UP</span><br>
                         <span class="log-impact">action:</span> checked_phone<br>
-                        <span class="log-note">"Uyandım. Aramayı gördüm. İçimde bir sıkıntı oluştu."</span>
+                        <span class="log-note">"Uyandım. mesajları gördüm. İçimde bir sıkıntı oluştu. Sonra ise aramayı gördüm rahatladım sonrasında mesaj yok beraber uyuduk dedim."</span>
                     </div>
                     <div class="log-entry">
                         <span class="log-time">[05:44]</span> <span class="log-event">CALL_INCOMING</span><br>
@@ -1097,7 +1097,7 @@
                     <div class="log-entry">
                         <span class="log-time">[SONRA]</span> <span class="log-event">AFTERMATH</span><br>
                         <span class="log-impact">feeling:</span> kırgınlık hissettim<br>
-                        <span class="log-note">"Abini aramışsın. 'Önemli değil' demişsin. Ama ben, o cümlenin altındaki kırgınlığı hissettim."</span>
+                        <span class="log-note">"Abini aramışsın. 'Önemli değil' dedin. Ama cümlenin altındaki kırgınlığı ve bir çok duyguyu hissediyorum."</span>
                     </div>
                 </div>
             </div>
@@ -1116,7 +1116,7 @@
                     </div>
                     <p class="model-preview">Sen korkarken beni aradın. Bu benim için çok şey ifade ediyor.</p>
                     <div class="model-expand">
-                        <p class="model-full-text">Fırtınada ilk aklına ben geldim. Bu, bana ne kadar güvendiğini gösteriyor. Ve ben o güveni korumak istiyorum. O gece tam yanında olamadım ama niyetim hep sendin.</p>
+                        <p class="model-full-text">Fırtınada ilk aklına ben geldim. Bu, bana ne kadar güvendiğini gösteriyor. Ve ben o güveni korumak istiyorum. Ben senin yanında olduğumu düşünerek uyudum.</p>
                     </div>
                 </div>
 
@@ -1127,7 +1127,7 @@
                     </div>
                     <p class="model-preview">İlkinde açtım ama konuşamadım. İkincisinde kaçırdım.</p>
                     <div class="model-expand">
-                        <p class="model-full-text">01:44'te açtım ama yarı uykuluyduk ikimiz de. 05:44'te ise geri uyumuştum ve kaçırdım. Hayal kırıklığı yaşadığını biliyorum. Bu benim hatam ve bunun için gerçekten üzgünüm.</p>
+                        <p class="model-full-text">01:44'te açtım ama yarı uykuluydum. 05:44'te ise geri uyumuştum ve kaçırdım. Hayal kırıklığı yaşadığını biliyorum. Bu benim hatam ve bunun için gerçekten üzgünüm.</p>
                     </div>
                 </div>
 
@@ -1136,9 +1136,9 @@
                         <div class="model-icon">🔑</div>
                         <h3 class="model-name">Güven</h3>
                     </div>
-                    <p class="model-preview">Güven küçük anlarla inşa edilir, bir gecede yıkılabilir.</p>
+                    <p class="model-preview">Bana güvenip beni aradın o kadar mutluyumki.</p>
                     <div class="model-expand">
-                        <p class="model-full-text">Senin güvenini kazanmak için ne gerekiyorsa yapmaya hazırım. Güven, sözlerle değil tutarlı davranışlarla inşa edilir. Bundan sonra her aramanda orada olacağım.</p>
+                        <p class="model-full-text">Seni çok seviyorum. Bana daima güvenmeni istiyorum gerçekten hep daha iyisi daha iyisi diye ilerliyorum. Seni çok seviyorum ben Eylülüm affet kendimi senin yanında hayal edip saldım ben.</p>
                     </div>
                 </div>
 
@@ -1149,7 +1149,7 @@
                     </div>
                     <p class="model-preview">Sen benim için önemlisin. Bunu her gün hissetmeni istiyorum.</p>
                     <div class="model-expand">
-                        <p class="model-full-text">Sen benim meleğimsin. O gece yanında olamadım diye bu değişmez. Seni seviyorum ve seninle barışmak istiyorum. Bana bir şans daha ver.</p>
+                        <p class="model-full-text">Sen benim meleğimsin. gece yanında olamadım diye bu değişmez. Seni seviyorum ve seninle barışmak istiyorum. Lütfen gel.</p>
                     </div>
                 </div>
             </div>
@@ -1165,7 +1165,7 @@
                     <div class="step-number">01</div>
                     <div class="step-content">
                         <h4 class="step-title">Sorumluluğu Alıyorum</h4>
-                        <p class="step-desc">Bahane yok. Sebep var ama bahane yok. O gece yanında olamadım ve bunun sorumluluğu benim.</p>
+                        <p class="step-desc">Bahane yok. Sebep var ama bahane yok. gece yanında olamadım ve bunun sorumluluğu benim.</p>
                         <span class="step-status">✓ ACKNOWLEDGED</span>
                     </div>
                 </div>
@@ -1181,15 +1181,15 @@
                     <div class="step-number">03</div>
                     <div class="step-content">
                         <h4 class="step-title">Değişeceğim</h4>
-                        <p class="step-desc">Bundan sonra senin araman her şeyden önce gelecek. Gece olsun, gündüz olsun, fark etmez.</p>
+                        <p class="step-desc">Bundan sonra kednimi asla rahatta bırakmayacağım salmayacağım.</p>
                         <span class="step-status">✓ COMMITTED</span>
                     </div>
                 </div>
                 <div class="repair-step scroll-reveal">
                     <div class="step-number">04</div>
                     <div class="step-content">
-                        <h4 class="step-title">Güvenini Yeniden Kazanacağım</h4>
-                        <p class="step-desc">Güven bir gecede inşa edilmez. Sabırla, tutarlılıkla, sevgiyle kazanacağım.</p>
+                        <h4 class="step-title">Benim de canım yanıyor.</h4>
+                        <p class="step-desc">İnan her salise ben çabalıyorum nefes almıyorum. Özür dilerim uyuyup o telefonu açmadığım için.</p>
                         <span class="step-status">✓ IN PROGRESS</span>
                     </div>
                 </div>
@@ -1209,14 +1209,14 @@
                     <div class="letter-corner letter-corner-tl"></div>
                     <div class="letter-corner letter-corner-br"></div>
                     <div class="letter-inner">
-                        <div class="letter-date">O gecenin sabahı yazıldı</div>
+                        <div class="letter-date">Gecenin sabahı yazıldı</div>
                         <div class="letter-text">
                             <p>Eylülüm,</p>
                             <p>Bu mektubu yazarken ellerim biraz titriyor. Çünkü sana karşı hissettiğim şeyleri kelimelerle anlatmak her zaman zor oldu benim için.</p>
-                            <p>O gece fırtına çıktığında beni aradın. Ben açtım ama konuşamadım. Uykudan yeni uyanmıştım, yarı bilinçliydim. Sonra tekrar aradığında geri uyumuştum ve kaçırdım. Bunu telafi edemem biliyorum.</p>
+                            <p>Gece fırtına çıktığında beni aradın. Ben açtım ama konuşamadım. Uykudan yeni uyanmıştım, yarı bilinçliydim. Sonra tekrar aradığında geri uyumuştum ve kaçırdım. Bunu telafi edemem biliyorum.</p>
                             <p>Ama sana şunu söylemek istiyorum: Sen benim için önemlisin. Fırtınada ilk aklına ben geldim ve bu benim için her şey demek. O güveni korumak istiyorum.</p>
-                            <p>Kırgınsın, biliyorum. Hayal kırıklığı yaşadın, anlıyorum. Ama lütfen bana bir şans daha ver. Güven küçük adımlarla inşa edilir ve ben o adımları atmaya hazırım.</p>
-                            <p>Seninle barışmak istiyorum. Sana güvenmeni istiyorum. Çünkü ben sana güveniyorum ve seni seviyorum.</p>
+                            <p>Kırgınsın, biliyorum. Hayal kırıklığı yaşadın, anlıyorum. Ama lütfen benim de senin için nasıl çabaladığımı gör bundan sonra daha dikkat edeceğim sadece secdiğim kadınla huzurluca uyuduğumu hissettim kendime gelmek istedim bu gece Herşeyim yanıdayken.</p>
+                            <p>Seninle barışmak istiyorum. bana güvenmeni istiyorum. Her saniye benimle gülmeni isityorum.</p>
                         </div>
                         <div class="letter-sign">
                             Her zaman senin,<br>
@@ -1265,7 +1265,7 @@
                 <div class="hidden-message">
                     <p>Eylülüm,</p>
                     <p>Sen benim meleğimsin.</p>
-                    <p>O gece yanında olamadım. Bu gerçek ve bunun için üzgünüm.</p>
+                    <p>Gece yanında olamadım. Bu gerçek ve bunun için üzgünüm.</p>
                     <p>Ama seni sevdiğim de gerçek. Ve bu hiç değişmedi.</p>
                     <p>Bana güven. Benimle barış. Yanımda ol.</p>
                     <p>Çünkü ben her zaman senin yanındayım.</p>
